# agentic-rag-ai

./: pyproject.toml
app/: config.py  ingestion.py  main.py
app/agents/: graph.py  tools.py
app/core/: embeddings.py  llm.py  reranker.py  vectorstore.py
app/ingestion/: pipeline.py  processor.py
app/services/: retrieval.py  retrieval_pipeline.py  schemas.py
